# worklog-git

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: cli.rs  clipboard.rs  config.rs  interactive.rs  main.rs  output.rs
cli/tests/: cli_integration.rs
core/: Cargo.toml  README.md
core/src/: git.rs  lib.rs  model.rs  period.rs
src/: cli.rs  discovery.rs  git.rs  interactive.rs  main.rs  model.rs  output.rs
tests/: cli_integration.rs
