[package]
name = "worklog-git"
version = "0.2.0"
edition = "2021"
description = "Aggregate git commits across repos for standups and time tracking"
default-run = "worklog-git"

[[bin]]
name = "worklog-git"
path = "src/main.rs"

[[bin]]
name = "wl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
anyhow = "1"
indicatif = "0.17"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
todo = "deny"
dbg_macro = "warn"
