[package]
name = "worklog-cli"
version.workspace = true
edition.workspace = true
description = "Aggregate git commits across repos for standups and time tracking"
default-run = "worklog-git"

[[bin]]
name = "worklog-git"
path = "src/main.rs"

[[bin]]
name = "wl"
path = "src/main.rs"

[dependencies]
worklog-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
anyhow = "1"
rayon = "1"
indicatif = "0.17"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
serde_json = "1"

[lints]
workspace = true
