[package]
name = "devcap-cli"
version.workspace = true
edition.workspace = true
description = "Aggregate git commits across repos for standups and time tracking"
default-run = "devcap"

[[bin]]
name = "devcap"
path = "src/main.rs"

[[bin]]
name = "wg"
path = "src/main.rs"

[dependencies]
devcap-core = { path = "../core", version = "0.3" }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
anyhow = "1"
rayon = "1"
indicatif = "0.17"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
toml = "0.8"

[lints]
workspace = true
