[package]
name = "devcap-core"
version.workspace = true
edition.workspace = true
description = "Core library for aggregating git commits across repositories"
license = "MIT"
repository = "https://github.com/konradmichalik/devcap"
readme = "README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
anyhow = "1"

[lints]
workspace = true
